syntax = "proto3";

package storesvr;

message RouterReq
{
    uint32 router_ver = 1;
};

message RouterResp
{
    bytes routers = 1; // RouterList
};

message SectionReq
{
    repeated uint32 sect_id = 1;
};

message SectionResp
{
    bytes sections = 1; // SectionList
};

message StoreReq
{
    uint32 sect_id = 1;
    uint64 max_seq = 2;
};

message StoreResp
{
};

import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";
import "phxrpc/rpc/phxrpc.proto";

service storesvr
{
    rpc GetRouterList( RouterReq ) returns( RouterResp ) {
        option( phxrpc.CmdID ) = 1;
        option( phxrpc.OptString ) = "v:";
        option( phxrpc.Usage ) = "-v <router_ver>";
    }

    rpc GetSections( SectionReq ) returns ( SectionResp ) {
        option( phxrpc.CmdID ) = 2;
        option( phxrpc.OptString ) = "s:";
        option( phxrpc.Usage ) = "-s <sect_id1,sect_id2>";
    }

    rpc storeSection( StoreReq ) returns ( StoreResp ) {
        option( phxrpc.CmdID ) = 2;
        option( phxrpc.OptString ) = "s:m:";
        option( phxrpc.Usage ) = "-s <sect_id> -m <max_seq>";
    }
}

